# carpentry-compiler

./: .gitignore  CMakeLists.txt  HELMConfig.xml  InitGui.py  README.md  TestPartDesignGui.py
App/: AppPartDesign.cpp  BOPTools.cxx  BOPTools.hxx  Body.cpp  Body.h  CMakeLists.txt  DatumCS.cpp  DatumCS.h  DatumPoint.cpp  DatumPoint.h  Feature.cpp  Feature.h  FeatureAddSub.cpp  FeatureAddSub.h  FeatureBoolean.cpp  FeatureBoolean.h  FeatureChamfer.cpp  FeatureChamfer.h  FeatureDraft.cpp  FeatureDraft.h  FeatureDressUp.cpp  FeatureDressUp.h  FeatureFillet.cpp  FeatureFillet.h  FeatureHole.cpp  FeatureLinearPattern.cpp  FeatureLinearPattern.h  FeatureLoft.cpp  FeatureMirrored.cpp  FeatureMirrored.h  FeatureMultiTransform.cpp  FeatureMultiTransform.h  FeaturePad.cpp  FeaturePipe.cpp  FeaturePipe.h  FeaturePocket.cpp  FeaturePocket.h  FeaturePolarPattern.cpp  FeaturePolarPattern.h  FeaturePrimitive.cpp  (+12 more)
DemoDesigns/: 1_new_four.FCStd  1_new_four_with_controllers.FCStd  2x8.FCStd  Anirondack.FCStd  Bench.FCStd  Birdhouse.FCStd  Birdhouse_no_holes.FCStd  Drafting Table.FCStd  TestChair.FCStd  ZTable-bug.FCStd  ZTable.FCStd  bookcase.FCStd  bookcase_short.FCStd1  coffeeTable.FCStd  diningRoomChair.FCStd  flowerpot.FCStd  four.FCStd1  new_four.FCStd  new_four.FCStd1  tiltingTrack.FCStd  toycarCurved.FCStd  triangle.FCStd  triangle_1.FCStd
DemoDesigns/Birdhouse/: mat.txt  part_global_0.iges  part_global_1.iges  part_global_2.iges  part_global_3.iges  part_global_4.iges  part_global_5.iges  part_global_6.iges  part_global_7.iges  part_local_0.iges  part_local_1.iges  part_local_2.iges  part_local_3.iges  part_local_4.iges  part_local_5.iges  part_local_6.iges  part_local_7.iges
DemoDesigns/MainObj/: mat.txt  part_global_0.iges  part_global_1.iges  part_global_2.iges  part_global_3.iges  part_global_4.iges  part_local_0.iges  part_local_1.iges  part_local_2.iges  part_local_3.iges  part_local_4.iges
DemoDesigns/MainObj19.5/: mat.txt  part_global_0.iges  part_global_1.iges  part_global_2.iges  part_global_3.iges  part_local_0.iges  part_local_1.iges
DemoDesigns/MainObj_3holes_longer/: mat.txt  order_levels_4.gml  part_global_0.iges  part_global_1.iges  part_global_2.iges  part_global_3.iges  part_global_4.iges  part_global_5.iges  part_local_0.iges  part_local_1.iges  part_local_2.iges  part_local_3.iges  part_local_4.iges  part_local_5.iges
DemoDesigns/MainObj_3holes_shorter/: mat.txt  part_global_0.iges  part_global_1.iges  part_global_2.iges  part_global_3.iges  part_global_4.iges  part_global_5.iges  part_local_0.iges  part_local_1.iges  part_local_2.iges  part_local_3.iges  part_local_4.iges  part_local_5.iges
DemoDesigns/bookcase/: mat.txt  part_global_0.iges  part_global_1.iges  part_global_10.iges  part_global_11.iges  part_global_2.iges  part_global_3.iges  part_global_4.iges  part_global_5.iges  part_global_6.iges  part_global_7.iges  part_global_8.iges  part_global_9.iges  part_local_0.iges  part_local_1.iges  part_local_10.iges  part_local_11.iges  part_local_2.iges  part_local_3.iges  part_local_4.iges  part_local_5.iges  part_local_6.iges  part_local_7.iges  part_local_8.iges  part_local_9.iges
DemoDesigns/bookcase1/: egraph.txt  mat.txt  order_levels_4.gml  part_global_0.iges  part_global_1.iges  part_global_10.iges  part_global_11.iges  part_global_2.iges  part_global_3.iges  part_global_4.iges  part_global_5.iges  part_global_6.iges  part_global_7.iges  part_global_8.iges  part_global_9.iges  part_local_0.iges  part_local_1.iges  part_local_10.iges  part_local_11.iges  part_local_2.iges  part_local_3.iges  part_local_4.iges  part_local_5.iges  part_local_6.iges  part_local_7.iges  part_local_8.iges  part_local_9.iges
DemoDesigns/chair/: mat.txt  part_global_0.iges  part_global_1.iges  part_global_10.iges  part_global_11.iges  part_global_2.iges  part_global_3.iges  part_global_4.iges  part_global_5.iges  part_global_6.iges  part_global_7.iges  part_local_0.iges  (+13 more)
Gui/: AppPartDesignGui.cpp  CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  Command.cpp  Compiler.cpp  Compiler.h  CompilerConfig.cpp  CompilerConfig.h  GEOMAlgo_Splitter.cxx  GEOMAlgo_Splitter.hxx  Geom2d_Edge.cpp  Geom2d_Edge.h  GeomCommonFunctions.cpp  GeomCommonFunctions.h  HLParser.cpp  HLParser.h  Highlighter.cpp  Highlighter.h  ISA.cpp  ISA.h  PCE.cpp  PCE.h  PCE_CS.cpp  PCE_PPart.cpp  PCE_Part.cpp  PCE_WoodLumber.cpp  PCE_arrange.cpp  PCE_edge.cpp  PCE_end.cpp  PCE_functs.cpp  PCE_position.cpp  PCE_transform.cpp  PHELM.cpp  PHELM.h  PHELM_Utils.cpp  PreCompiled.h  ReferenceSelection.cpp  TaskDatumParameters.cpp  TaskHoleParameters.cpp  (+39 more)
Gui/Resources/: Drawing.qrc  PartDesign.qrc  tools.qrc
Gui/clipper/: clipper.cpp
Gui/opt/: .gitignore  README.md  config.hpp  egraph.cpp  egraph.hpp  evaluator.cpp  evaluator.hpp  graphmap.hpp  llhelm.cpp  llhelm.hpp  nsgaii.hpp  optimizer.cpp  optimizer.hpp  parsers.cpp  parsers.hpp
Gui/opt/pagmo/: config.hpp
Gui/opt/scripts/: 2dprojection.py  data.py  hlhelm_sugar.py  llhelm_sugar.py  llhelm_sugar_old.py  plot.py
Gui/opt/scripts/draw_curve/: compute_iter.py
Gui/opt/scripts/not-necessary/: Stat.py  Test.py  clean.py  collapse.py  parse.py
Gui/opt/scripts/pareto-exploration/: explore_result.py  get_pareto_comb.py  pareto-front-v2.py  pareto-front.py  plot.py  plot_with_blue_dots.py
Gui/pagmo/: island.hpp  population.hpp  problem.hpp  type_traits.hpp
Gui/pagmo/problems/: decompose.hpp  dtlz.hpp
Gui/pagmo/utils/: generic.hpp  multi_objective.hpp
Gui/pagmo/utils/hv_algos/: hv_hvwfg.hpp
Gui/sexp/: .appveyor.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md
Gui/sexp/benchmarks/: lexer.cpp  parser.cpp
Gui/sexp/include/sexp/: error.hpp  io.hpp  parser.hpp  util.hpp  value.hpp
Gui/sexp/src/: float.cpp  io.cpp  lexer.cpp  parser.cpp  util.cpp  value.cpp
Gui/sexp/tests/: float_test.cpp  io_test.cpp  lexer_test.cpp  parser_test.cpp  util_test.cpp  value_test.cpp
Gui/solvespace/: slvs.lib
Scripts/: Parallelepiped.py  Parser.py  Plot_bach.py  Spring.py  lifetime.bat  lifetime.py  plot.bat  plot.py  plot_bach.bat
(+45 files in other folders)
